src/logs/webapplication.log

/home/PL_web-app/server.js:139
    var replace_display_string = "sed -i" + " " + `'/display_type/c\\${display
                                                  ^
SyntaxError: Unexpected token ILLEGAL
    at Module._compile (module.js:439:25)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Function.Module.runMain (module.js:497:10)
    at startup (node.js:119:16)
    at node.js:902:3
